--- a/index.html
+++ b/index.html
@@ -204,18 +204,19 @@
         </div>
       </div>
   </main>
-  <footer class="footer">
-     <div class="footer-brand">
+  <footer class="footer container-fluid">
+    <div class="row footerRow">
+     <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
       <a href="index.html">
         <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
       </a>
     </div>
-    <div class="footer-copywrite">
+    <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
       <h2>
         © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
       </h2>
     </div>
-    <div class="footer-rrss">
+    <div class=" col-lg-4 col-md-4 col-xs-12 footer-rrss">
         <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
         </a>
@@ -233,7 +234,8 @@
           />
         </a>
       </div>
-  </footer>
+    </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
