--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -108,40 +108,44 @@
         </div>
       </div>
     </main>
-    <footer class="footer">
-      <div class="footer-brand">
-        <a href="index.html">
-          <img
-            class="logo-brand"
-            src="./img/logo_transparente.png"
-            alt="logo"
-          />
-        </a>
-      </div>
-      <div class="footer-copywrite">
-        <h2>© 2021 - Todos los derechos reservados. By Michelle Ticchetti.</h2>
-      </div>
-      <div class="footer-rrss">
-        <a href="https://www.facebook.com/">
-          <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
-        </a>
-        <a href="https://www.instagram.com">
-          <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
-        </a>
-        <a href="https://www.youtube.com">
-          <img
-            class="logo-rrss"
-            src="./img/youtube_logo.png"
-            alt="ytube_logo"
-          />
-        </a>
-        <a href="https://www.whatsapp.com">
-          <img
-            class="logo-rrss"
-            src="./img/whatsapp_logo.png"
-            alt="whatsapp_logo"
-          />
-        </a>
+    <footer class="footer container-fluid">
+      <div class="row footerRow">
+        <div class="col-lg-4 col-md-4 col-xs-12 footer-brand">
+          <a href="index.html">
+            <img
+              class="logo-brand"
+              src="./img/logo_transparente.png"
+              alt="logo"
+            />
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-12 footer-copywrite">
+          <h2>
+            © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+          </h2>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-12 footer-rrss">
+          <a href="https://www.facebook.com/">
+            <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+          </a>
+          <a href="https://www.instagram.com">
+            <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
+          </a>
+          <a href="https://www.youtube.com">
+            <img
+              class="logo-rrss"
+              src="./img/youtube_logo.png"
+              alt="ytube_logo"
+            />
+          </a>
+          <a href="https://www.whatsapp.com">
+            <img
+              class="logo-rrss"
+              src="./img/whatsapp_logo.png"
+              alt="whatsapp_logo"
+            />
+          </a>
+        </div>
       </div>
     </footer>
     <script
